styles.css
:root {
  --color: #262626;
  --bg-color: #dad1c1;
}

*, *::before, *::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Old Standard TT', serif;
  background-color: var(--bg-color);
  color: var(--color);
  font-size: 1.125rem;
  line-height: 1.6;
}

a {
  color: maroon;
  font-weight: 700;
  text-decoration: none;
}

a:hover {
  color: var(--color);
  text-decoration: underline;
}

header {
  text-align: center;
  padding: 3em 0;
}

h1 {
  font-size: 10rem;
  line-height: 1;
}

header p {
  font-size: 3rem;
}

h2 {
  font-size: 3rem;
  padding: .1em 0;
  border-top: 5px solid;
  border-bottom: 5px solid;
  margin-bottom: 1em;
  line-height: 1;
}

h3 {
  margin-bottom: 0.5em;
}

p {
  margin-bottom: 1em;
}

main {
  max-width: 1200px;
  margin-inline: auto;
}

.split-container {
  display: grid;
    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
    gap: 2em;
}

.section {
  width: 100%;
  max-width: 600px;
  margin-inline: auto;
  margin-bottom: 4em;
}

.section.projects {
  max-width: 100%;
}

.about img {
  max-width: 200px;
  float: left;
  margin-right: 1em;
  margin-bottom: 1em;
}

.skills-container {
  display: flex;
  flex-wrap: wrap;
  gap: 2em;
}

.skills-container > * {
  width: calc(50% - 2em);
  border-left: 2px solid;
  padding-left: 1em;
}

.skills ul {
  padding: 0;
  list-style: none;
}


.projects-container {
  display: flex;
  flex-wrap: wrap;
  gap: 2em;
  justify-content: space-between;
}

.projects-container > * {
  max-width: 250px;
}

.project {
  margin-bottom: 1em;
}

.project img {
  max-width: 100%;
  display: block;
  margin-bottom: 1em;
}

form {
  margin-top: 1em;
}

.label, input, textarea {
  display: block;
  width: 100%;
}

input, textarea {
  padding: 0.2em;
  font-size: inherit;
  font-family: inherit;
  margin-bottom: .8em;
}

.btn {
  display: inline-block;
  padding: .5em 1.25em;
  border: 2px solid var(--color);
  font-family: inherit;
  font-size: inherit;
  background-color: transparent;
  font-weight: bold;
  transition: all .2s;
}

.btn:hover {
  color: maroon;
  border-color: maroon;
}

